--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=sunmall
 server.port=9001
 
-spring.datasource.url=jdbc:mysql://192.168.157.133:3306/sunmall
+spring.datasource.url=jdbc:mysql://182.92.82.68:3306/test
 spring.datasource.username=root
 spring.datasource.password=wimill123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
