--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,9 @@
 		</dependency>
 
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+		   <groupId>org.postgresql</groupId>
+		   <artifactId>postgresql</artifactId>
+           <version>9.4-1205-jdbc4</version>
         </dependency>
 
         <dependency>
@@ -80,9 +81,9 @@
                 <dependencies>
                     <!--数据库驱动 -->
                     <dependency>
-                        <groupId> mysql</groupId>
-                        <artifactId> mysql-connector-java</artifactId>
-                        <version>5.1.9</version>
+                        <groupId>org.postgresql</groupId>
+                        <artifactId>postgresql</artifactId>
+                        <version>9.4-1205-jdbc4</version>
                     </dependency>
                     <dependency>
                         <groupId>org.mybatis</groupId>
