--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=sunmall
 server.port=9001
 
-spring.datasource.url=jdbc:mysql://182.92.82.68:3306/test
-spring.datasource.username=root
-spring.datasource.password=wimill123
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://localhost:60008/sunmall_development
+spring.datasource.username=xiaorongtao
+spring.datasource.password=
+#spring.datasource.driver-class-name=org.postgresql.jdbc.driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.max-active: 20
 spring.datasource.initial-size: 1
