[mybatis] config --- now is runnable
Signed-off-by: Xiao Rong Tao <xiaorongtao@le.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9001
 
 spring.datasource.url=jdbc:postgresql://localhost:60008/sunmall_development
 spring.datasource.username=xiaorongtao
-spring.datasource.password=
+spring.datasource.password=org.postgresql.Driver
 #spring.datasource.driver-class-name=org.postgresql.jdbc.driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.max-active: 20
@@ -15,5 +15,7 @@ spring.datasource.min-evictable-idle-time-millis: 300000
 spring.datasource.test-while-idle: true
 spring.datasource.test-on-borrow: false
 spring.datasource.test-on-return: false
+
+mybatis.mapperLocations: classpath:mybatis/*.xml
 
 debug=true
