[tmp] can not running
Signed-off-by: Xiao Rong Tao <xiaorongtao@le.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=9001
 
 spring.datasource.url=jdbc:postgresql://localhost:60008/sunmall_development
 spring.datasource.username=xiaorongtao
-spring.datasource.password=org.postgresql.Driver
-#spring.datasource.driver-class-name=org.postgresql.jdbc.driver
+spring.datasource.password=
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.max-active: 20
 spring.datasource.initial-size: 1
@@ -16,6 +16,21 @@ spring.datasource.test-while-idle: true
 spring.datasource.test-on-borrow: false
 spring.datasource.test-on-return: false
 
+
+#mybatis
+mybatis.type-aliases-package=tk.mybatis.springboot.model
 mybatis.mapperLocations: classpath:mybatis/*.xml
+
+#mapper
+#mappers 多个接口时逗号隔开
+mapper.mappers=tk.mybatis.springboot.util.MyMapper
+mapper.not-empty=false
+mapper.identity=POSTGRESQL
+
+#pagehelper
+pagehelper.helperDialect=postgresql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
 
 debug=true
