--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,18 @@
 		</dependency>
 
         <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
             <version>1.0.28</version>
@@ -88,8 +100,8 @@
                         </execution>
                     </executions>
                     <configuration>
-                        <inputPath>src/main/resources/static/stylesheets/</inputPath>
-                        <outputPath>target/classes/static/stylesheets/</outputPath>
+                        <inputPath>/home/xiaorongtao/1018/wimill/sunmall/src/main/resources/static/stylesheets/</inputPath>
+                        <outputPath>/home/xiaorongtao/1018/wimill/sunmall/target/classes/static/stylesheets/</outputPath>
                         <outputStyle>compressed</outputStyle>
                         <generateSourceMap>false</generateSourceMap>
                     </configuration>
@@ -106,16 +118,11 @@
                         <artifactId>postgresql</artifactId>
                         <version>9.4-1205-jdbc4</version>
                     </dependency>
-                    <dependency>
-                        <groupId>org.mybatis</groupId>
-                        <artifactId>mybatis-spring</artifactId>
-                        <version>1.3.1</version>
-                    </dependency>
 
                     <dependency>
-                        <groupId>org.mybatis</groupId>
-                        <artifactId>mybatis</artifactId>
-                        <version>3.1.1</version>
+                        <groupId>tk.mybatis</groupId>
+                        <artifactId>mapper</artifactId>
+                        <version>3.4.0</version>
                     </dependency>
                 </dependencies>
 
