--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,12 +18,12 @@ spring.datasource.test-on-return: false
 
 
 #mybatis
-mybatis.type-aliases-package=tk.mybatis.springboot.model
+mybatis.type-aliases-package=com.wimill.sunmall.model
 mybatis.mapperLocations: classpath:mybatis/*.xml
 
 #mapper
 #mappers 多个接口时逗号隔开
-mapper.mappers=tk.mybatis.springboot.util.MyMapper
+#mapper.mappers=com.wimill.sunmall.MyMapper
 mapper.not-empty=false
 mapper.identity=POSTGRESQL
 
