--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.application.name=sunmall
 server.port=9001
 
-spring.datasource.url=jdbc:postgresql://localhost:60008/sunmall_development
-spring.datasource.username=xiaorongtao
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.url=jdbc:postgresql://localhost:5432/sunmall_development
+spring.datasource.username=showntop
 spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+
 spring.datasource.max-active: 20
 spring.datasource.initial-size: 1
 spring.datasource.min-idle: 3
